CGE-135 Add tests for WORD_EMPTY_OR_MIN_2_MAX_50 regexp, USERNAME regexp; change PatternHandler